# kanad-compute

./: .gitignore  ARCHIVED.md  LICENSE  PHILOSOPHY.md  README.md  pyproject.toml  todo.md  web-todo.md
kanad_compute/kanad/: .gitignore  AUDIT_WORKLIST.md  FIX_AND_IMPROVE_PLAN.md  PLANCK_SOLVER_PROTOCOL_AUDIT.md  README.md  __init__.py  pyproject.toml  pytest.ini  setup.py
kanad_compute/kanad/.github/workflows/: benchmarks.yml  notify-consumers.yml
kanad_compute/kanad/analysis/: __init__.py  bond_scanner.py  configuration_explorer.py  dos_calculator.py  dynamics_analysis.py  energy_analysis.py  molecular_descriptors.py  nmr_calculator.py  property_calculator.py  quantum_nmr.py  quantum_response.py  raman_calculator.py  spectroscopy.py  thermochemistry.py  uncertainty.py  vibrational_analysis.py
kanad_compute/kanad/backends/: __init__.py  base_backend.py  factory.py  planck_adapter.py  qiskit_backend.py  statevector_backend.py
kanad_compute/kanad/backends/bluequbit/: __init__.py  backend.py
kanad_compute/kanad/backends/ibm/: __init__.py  backend.py  error_mitigation.py
kanad_compute/kanad/backends/ionq/: __init__.py  backend.py
kanad_compute/kanad/benchmarks/: README.md  __init__.py  planck_full_analysis_audit.py  planck_photodyn_analysis.py  planck_protocol_audit.py  planck_scale_34q.py  planck_scale_audit.py  planck_scale_calibrate.py  planck_solver_analysis_audit.py  run_benchmarks.py  runner.py  solver_protocol_matrix.md  solver_protocol_matrix.py
kanad_compute/kanad/benchmarks/_archive/: m5a_n2_dissociation.py  m5b_hcn_three_points.py  m5c_ch2_singlet_triplet.py  m5d_lih_photodynamics.py  m6_c2_dissociation.py  m6_cyclobutadiene.py  m6_f2_dissociation.py  m6_mbenzyne.py  m6_pbenzyne_warmup.py
kanad_compute/kanad/benchmarks/local/: tier3_adme.py  tier3_props.py  tier3_spectra.py  tier_A_cbs_spec.py  tier_A_fci.py  tier_A_strong.py  tier_B_basis.py  tier_B_frontier.py  tier_B_nevpt2.py  tier_B_saexc.py  tier_B_select.py  tier_C_ham.py  tier_C_probe.py  tier_C_props.py  tier_C_solvers.py  tier_C_verify.py  tier_W1.py  tier_W1b.py  tier_W2.py  tier_W3.py  tier_W4.py
kanad_compute/kanad/benchmarks/qpu/: cloud_frontier.py  cloud_sqd_demo.py  ibm_batch_sqd.py  ibm_lucj_batch.py  ibm_sqd_demo.py  m11c_naphthalene_heron.py  m11d_fe2s2_heron.py  m5_heron_reactions_dynamics.py  m8_naphthalene_excited.py  tier_A_qpu_fci.py  tier_qpu.py  tier_qpu_max.py
kanad_compute/kanad/benchmarks/results/: results.csv  results.md  results_scale.md
kanad_compute/kanad/benchmarks/scale/: builder_sqd_crosscheck.py  m10_cube_scale.py  m10_picker_scale.py  tier3_scale.py  tier4_scale.py  tier5_frontier.py  tier_hard.py  tier_hard2.py  tier_hard_dyn.py
kanad_compute/kanad/bonds/: __init__.py
kanad_compute/kanad/builder/: __init__.py  molecular_builder.py  quantum_system.py  system_spec.py
kanad_compute/kanad/core/: __init__.py  atom.py  configuration.py  correlation.py  gradients.py  harmonic.py  lattice.py  molecule.py  scf.py  solver_result.py  temperature.py
kanad_compute/kanad/core/active_space/: __init__.py  integral_transform.py  selector.py
kanad_compute/kanad/core/ansatze/: __init__.py  base_ansatz.py  custom_circuit_ansatz.py  efficient_excitation.py  givens_rotation_ansatz.py  hardware_efficient_ansatz.py  lucj_ansatz.py  lucj_ffsim_ansatz.py  physics_driven_ansatz.py
kanad_compute/kanad/core/bonds/: __init__.py  base_bond.py  bond_factory.py  covalent_bond.py  ionic_bond.py  metallic_bond.py
kanad_compute/kanad/core/cache/: __init__.py  parameter_cache.py
kanad_compute/kanad/core/ci/: __init__.py  config_recovery.py  gpu_ci.py  selected_ci.py  slater_condon.py
kanad_compute/kanad/core/constants/: __init__.py  atomic_data.py  conversion_factors.py  physical_constants.py
kanad_compute/kanad/core/density/: __init__.py  density_storage.py  quantum_rdm.py  sampled_rdm.py
kanad_compute/kanad/core/environment/: __init__.py  integration.py  ph_effects.py  pressure.py  solvent.py  temperature.py
kanad_compute/kanad/core/error_mitigation/: __init__.py  expectation.py  strategy.py  zne.py
kanad_compute/kanad/core/governance/: __init__.py
kanad_compute/kanad/core/hamiltonians/: __init__.py  covalent_hamiltonian.py  fast_pauli_builder.py  ionic_hamiltonian.py  metallic_hamiltonian.py  molecular_hamiltonian.py  pauli_converter.py  periodic_hamiltonian.py
kanad_compute/kanad/core/integrals/: __init__.py  basis_registry.py  basis_sets.py  one_electron.py  overlap.py  property_integrals.py  transforms.py  two_electron.py
kanad_compute/kanad/core/io/: __init__.py  crystal_builder.py  smiles_parser.py  xyz_io.py
kanad_compute/kanad/core/mappers/: __init__.py  base_mapper.py  bravyi_kitaev_mapper.py  hybrid_orbital_mapper.py  jordan_wigner_mapper.py  tapering.py
kanad_compute/kanad/docs/: CHANGES_2026-06-16.md  MIGRATION-solver-protocol.md  planck-integration.md
kanad_compute/kanad/dynamics/: __init__.py  initialization.py  integrators.py  md_simulator.py  nonadiabatic.py  photodynamics.py  quantum_forces.py  quantum_gradients.py  quantum_md.py  quantum_nac.py  spectroscopy_dynamics.py  thermostats.py  trajectory.py
kanad_compute/kanad/ideas/: 21-validation-suite.md  25-exploration-workflows.md  26-industrial-deployment.md
kanad_compute/kanad/reactions/: __init__.py  _irc.py  kinetics.py  quantum_reaction.py  reaction_dynamics.py
kanad_compute/kanad/scripts/: planck_battery.py
kanad_compute/kanad/solvers/: __init__.py  _hivqe_mixin.py  base_solver.py  capabilities.py  ci_solver.py  deterministic_ci.py  excited_states_solver.py  hardware_vqe.py  lanczos_solver.py  meta.py  periodic_solver.py  physics_vqe.py  qeom_vqe.py  registry.py  sampled_subspace_vqe.py  sampling_sqd.py  smart_solver.py  solver_router.py  subspace_diagonalizer.py  varqite_solver.py  vqe_solver.py
rust/: Cargo.toml
rust/crates/auth/: Cargo.toml
rust/crates/auth/src/: lib.rs
rust/crates/cli/: Cargo.toml
rust/crates/gateway/: Cargo.toml
rust/crates/protocol/: Cargo.toml
rust/crates/runtime/: Cargo.toml
rust/crates/tui/: Cargo.toml
rust/crates/vault/: Cargo.toml
(+75 files in other folders)
