[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanad-compute"
version = "0.2.15"
description = "Turn your computer into a Kanad quantum chemistry compute server"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "DeepRealm Labs", email = "mk@deeprealm.in"},
]
keywords = ["quantum", "chemistry", "compute", "kanad", "vqe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psutil>=5.9.0",
    # Kanad core (quantum chemistry) — pinned to the kanad-app requirements (the
    # proven, runs-every-solver set). The bundled framework targets qiskit 2.x.
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.12.0",
    "qiskit>=2.0,<3.0",
    "qiskit-aer>=0.16.0",
    "qiskit-ibm-runtime>=0.34.0",   # IBM QPU sampling (hybrid SQD path)
    "openfermion>=1.6.0",           # Bravyi-Kitaev mapper delegates to openfermion
    "pyscf>=2.8.0",
    "pyscf-properties>=0.1.0",      # dipole / property calculators
    "rdkit>=2024.3.1",              # SMILES → molecule
    "h5py>=3.10.0",                 # PySCF I/O
    "matplotlib>=3.8.0",            # analysis / plotting paths
    "pylatexenc>=2.10",             # qiskit circuit visualization
    # SQD / LUCJ hardware path — imported optionally by the framework, so without them the
    # node can't run the sample-based-diagonalization workflow (it silently degrades). These
    # are pure-python / wheels and qiskit-2.x compatible, so they belong in the default set.
    "ffsim>=0.0.80",                # LUCJ ansatz (IBM-hardware SQD)
    "qiskit-addon-sqd>=0.11.0",     # sample-based quantum diagonalization
    # NOTE: qiskit-nature (optional qubit tapering) is intentionally NOT here — its current
    # release needs numpy>=2 which conflicts with the numpy<2 pin. The framework imports it
    # optionally (try/except) so tapering just degrades gracefully; SQD/LUCJ don't need it.
]

[project.optional-dependencies]
gpu = [
    # qiskit-aer-gpu only supports Python <3.13 — install manually if on 3.11/3.12
    # "qiskit-aer-gpu>=0.15.0",
]
ibm = [
    "qiskit-algorithms>=0.3.0",   # SPSA optimizer used on the IBM hardware path
]
ionq = [
    "qiskit-ionq>=1.0.0",
]
bluequbit = [
    "bluequbit>=0.9",
]
ngrok = [
    "pyngrok>=7.0",
]
all = [
    "kanad-compute[ibm,ionq,bluequbit]",
]

[project.scripts]
kanad-compute = "kanad_compute.cli:main"

[project.urls]
Homepage = "https://kanad.xyz"
Repository = "https://github.com/mk0dz/kanad-compute"

[tool.setuptools.packages.find]
include = ["kanad_compute*", "kanad_compute.kanad*"]

[tool.setuptools.package-data]
"kanad_compute" = ["kanad/**/*.py", "kanad/**/*.json", "kanad/**/*.dat"]
