[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/vault",
    "crates/auth",
    "crates/gateway",
    "crates/runtime",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["DeepRealm Labs <mk@deeprealm.in>"]
repository = "https://github.com/deeprealm-labs/kanad-compute"

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# serde / json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# http / auth
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }

# crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# os keyring
keyring = "3.6"

# cli / tui
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# error
thiserror = "1.0"
anyhow = "1.0"

# misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.20"

# numerics
num-complex = "0.4"
ndarray = "0.16"

# in-workspace
kanad-protocol = { path = "crates/protocol" }
kanad-vault = { path = "crates/vault" }
kanad-auth = { path = "crates/auth" }
kanad-gateway = { path = "crates/gateway" }
kanad-runtime = { path = "crates/runtime" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
