[package]
name = "kanad-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RFC 8628 device authorization client for kanad-compute."

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "macros"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
