[package]
name = "kanad-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Outbound WebSocket gateway client for kanad-compute."

[dependencies]
kanad-protocol.workspace = true
kanad-runtime.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
http = "1.1"
serde.workspace = true
serde_json.workspace = true
url.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
rand.workspace = true
chrono.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["full", "test-util"] }
