[package]
name = "kanad-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OS keyring credential vault for kanad-compute."

[dependencies]
keyring.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
parking_lot.workspace = true
